--- a/SitefinityMobileApp/index.html
+++ b/SitefinityMobileApp/index.html
@@ -1,42 +1,89 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World!</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+	<head>
+		<title></title>
+		<meta charset="utf-8" />
+		<link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
+		<link href="styles/main.css" rel="stylesheet" />
+        <link href="kendo/styles/kendo.common.min.css" rel="stylesheet" />
+        <link href="kendo/styles/kendo.default.min.css" rel="stylesheet" />
+        <script src="cordova.js"></script>
+        <script src="kendo/js/jquery.min.js"></script>
+        <script src="kendo/js/jquery.cookie.js"></script>
+		<script src="kendo/js/kendo.mobile.min.js"></script>
+        <script src="kendo/js/kendo.all.min.js"></script>
+        <script src="scripts/jQueryMapPlugins/js/jquery.ui.map.js"></script>
+		<script src="scripts/jQueryMapPlugins/js/jquery.ui.map.extensions.js"></script>
+        <script src="scripts/sitefinitySDK.js"></script>
+	</head>
+	<body id="sfbox">
+        <div data-role="modalview" id="modalview-eula" data-model="sitefinityBox.viewModel" class="" style="width: 100%; height: 90%;" >
+            <div data-role="header">
+				<div data-role="navbar">
+					<span data-role="view-title">End user license agreement</span>
+				</div>
+			</div>
+            <div data-role="scroller" class="scroller-content">
+                <div id="eulaContent" class="eula-wrp">
+                    <!-- This content is dynamically loaded from license/eula.html -->
+                </div>
+                <div class="btn-wrp">
+			        <a data-role="button" class="km-button" data-bind="click: acceptEula">Accept</a>
+			        <a data-role="button" class="km-button" data-bind="click: cancelEula">Cancel</a>
+                </div>
             </div>
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </body>
+        
+		<div data-role="view" id="tabstrip-home" data-model="sitefinityBox.viewModel" class="login-scrn">
+            <div data-role="scroller">
+			    <h1 class="logo"><img src="img/logo.png" alt="Sitefinity Box"></h1>
+                <ul class="km-listview km-list km-listinset">
+				    <li>
+					    <label for="website" style="display: inline-block;">Website</label>
+					    <input type="text" id="website" data-bind="value: userData.website" />
+				    </li>
+				    <li>
+					    <label for="username" style="display: inline-block;">Username</label>
+					    <input type="text" id="username" data-bind="value: userData.username"  />
+				    </li>
+				    <li>
+					    <label for="password" style="display: inline-block;">Password</label>
+					    <input type="password" id="password" data-bind="value: userData.password"  />
+				    </li>
+			    </ul>
+                <div class="btn-wrp">
+			        <a data-role="button" class="km-button login_button" data-bind="click: logIn">Log In</a>
+                </div>
+            </div>
+            <div data-role="footer"></div>
+		</div>
+		
+		<div data-role="view" id="tabstrip-applications" data-title="Sitefinity Box" data-model="sitefinityBox.viewModel">
+			<div data-role="header">
+				<div data-role="navbar">
+					<span data-role="view-title"></span>
+					<a href="#" data-bind="click: logOut" data-align="left" data-role="button">Log out</a>
+                    <button href="#" data-bind="click: refresh, visible: isSitefinityAccessible" data-align="right" data-role="button" class="refresh-list">Refresh</button>
+                </div>
+			</div>
+			<ul
+				data-role="listview"
+				data-template="applicationsTemplate"
+				data-bind="source: dataSource, events: {click: downloadApplication}"
+				class="app-list">
+			</ul>
+		</div>
+
+		<!--templates-->
+		<script type="text/x-kendo-tmpl" id="applicationsTemplate">
+            <div data-role="button" class="black_button">
+                <img data-bind="attr: { src: getIconSrc }"  width="88" height="88" /> 
+                <b class="app-name">
+                    #= name#
+                </b>
+            </div>
+		</script>
+        <script src="scripts/repository.js"></script>
+		<script src="scripts/sitefinityBox.js"></script>
+	</body>
 </html>
